# eu5-scraper

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_forum_page.py
scraper/: requirements.txt  scrapy.cfg  upload_to_blob.py
scraper/eu5_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/eu5_scraper/spiders/: eu5_spider.py
