[project]
name = "eu5-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence_transformers",
    "scrapy",
    "markdownify",
    "beautifulsoup4",
    "lxml",
    "scrapy-selenium",
    "selenium",
    "ruff",
    "scrapy-playwright>=0.0.44",
    "playwright>=1.57.0",
    "azure-storage-blob>=12.27.1",
    "azure-identity>=1.25.1",
    "typer>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]

ignore = ["E203"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-line-length = "dynamic"

